# vtasca.github.io

./: .gitignore  AGENTS.md  CNAME  README.md  _config.yml  blog_metadata.json  core.js  index.html  pyproject.toml  styles.css
.github/workflows/: generate-and-publish.yml
html/: a-field-trip-with-correlation.html  getting-started-with-web-scraping.html
md/: a50d616f-32e1-454f-ad42-8ce0b004a6ee.md
published/: index.html
published/blog/: a-field-trip-with-correlation.html  getting-started-with-web-scraping.html
scripts/: build.py  fetch.py  generate_blog.py  optimize_svg.py  process_svg.py  serve.py
src/: blog_metadata.json  data_metadata.json  index.html
src/blog/: index.html
src/blog/md/: 1b2ca28d-9485-80a7-9b34-e7b69593b82b.md  a50d616f-32e1-454f-ad42-8ce0b004a6ee.md  f8d3a26f-1728-4c26-b8ac-964063087412.md
src/static/: core.js  lightbox.js  styles.css
src/static/js/: theme.js
src/static/js/tools/: dithering.js  tokenizer.js
src/static/styles/: article.css  base.css  blog.css  contact.css  data.css  footer.css  home.css  lightbox.css  mobile-menu.css  navigation.css  reset.css  tools.css  variables.css
src/templates/: base.html  blog-index.html  blog-post.html  contact.html  data.html  dithering.html  home.html  logo.html  rss.xml  tokenizer.html  tools.html
static/: core.js  styles.css
