[project]
name = "vtasca-github-io"
version = "0.1.0"
description = "Small website powered by GitHub Pages, Actions and some Python glue."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "latex2mathml>=3.77.0",
    "markdown2>=2.5.3",
    "notion-client>=2.3.0",
    "notion2md>=2.9.0",
    "python-dotenv>=1.0.1",
    "watchdog>=6.0.0",
]
